<resources>
    <string name="app_name">QLife</string>

    <!--Activity names-->
    <string name="activity_login">Login</string>
    <string name="activity_maps">Map</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_about">About</string>
    <string name="activity_review">Review</string>

    <!--Fragment names-->
    <string name="fragment_day">Day</string>
    <string name="fragment_event_info">Class</string>
    <string name="fragment_month">Month</string>
    <string name="fragment_buildings">Buildings</string>
    <string name="fragment_cafeterias">Cafeterias</string>
    <string name="fragment_food">Food Establishments</string>
    <string name="fragment_student_tools">Student Tools</string>
    <string name="fragment_emerg_contacts">Emergency Contacts</string>
    <string name="fragment_eng_contacts">Engineering Contacts</string>
    <string name="fragment_qrcode">QR Code</string>
    <string name="fragment_ilc_rooms">ILC Rooms</string>

    <!--Short text in app-->
    <string name="brought_by">Brought to you by</string>
    <string name="software_team">Queen\'s Engineering Society Software Development Team</string>
    <string name="current_user">Current User:</string>
    <string name="login_date">Last Login:</string>
    <string name="has_food">Building has food: </string>
    <string name="takes_meal_plan">Accepts meal plan: </string>
    <string name="takes_card">Accepts debit/credit: </string>
    <string name="no_events">No events today</string>
    <string name="resources">Resources</string>
    <string name="links">Links</string>
    <string name="information_title">Information:</string>

    <!--Table row labels-->
    <string name="week_hours">Mon - Thurs</string>
    <string name="fri_hours">Friday</string>
    <string name="sat_hours">Saturday</string>
    <string name="sun_hours">Sunday</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="takes_meal_plan_short">Meal plan </string>
    <string name="takes_card_short">Debit/credit </string>
    <string name="atm">ATM</string>
    <string name="book_rooms">Work rooms</string>
    <string name="purpose">Purpose</string>

    <!--Button text-->
    <string name="play_again">Play Again</string>
    <string name="next">NEXT</string>
    <string name="today">TODAY</string>
    <string name="available">AVAILABLE</string>
    <string name="all">ALL</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="counselling_services">Counselling Services</string>
    <string name="career_services">Career Services</string>
    <string name="solus">Solus</string>
    <string name="outlook365">Outlook 365</string>
    <string name="engsoc_apply">Engsoc Apply</string>
    <string name="onq">OnQ</string>
    <string name="logout">Log Out</string>
    <string name="prev">PREV</string>
    <string name="food">Food</string>
    <string name="review_app">Review on Play Store</string>
    <string name="suggestions">Give suggestions</string>
    <string name="title_class">Class</string>
    <string name="enter_number">Re-enter student number</string>
    <string name="clear_number">Clear student number</string>

    <!--sections in drawer-->
    <string name="schedule_section">Schedule</string>
    <string name="campus_section">Campus</string>
    <string name="information_section">Information</string>
    <string name="qrcode">QR Code</string>

    <!--URLs-->
    <string name="onq_url">http://onq.queensu.ca/</string>
    <string name="microsoft_url">https://login.microsoftonline.com/</string>
    <string name="solus_url">http://www.my.queensu.ca/</string>
    <string name="counselling_url">http://queensu.ca/studentwellness/counselling-services</string>
    <string name="career_url">http://careers.queensu.ca/students</string>
    <string name="apply_url">https://webapp.queensu.ca/ams/AMSapply/ENGSOC/</string>
    <string name="suggestions_url">http://qtap.engsoc.queensu.ca/improvements_form.html</string>
    <string name="suggestions_accepted_url">http://qtap.engsoc.queensu.ca/submit_improvement.php</string>

    <!--ILC Room Strings-->
    <string name="ilc_room">ILC ROOM&#160;</string>
    <string name="current_availability">Availability for &#160;</string>
    <string name="ilc_room_pic">Room picture</string>
    <string name="no_rooms_available">No rooms are available</string>
    <string name="no_data">Sorry! Something went wrong!</string>

    <!-- other strings -->
    <string name="ellipses">&#8226;</string>
    <string name="init_database">Initializing Database</string>
    <string name="message_no_class">No class today!</string>
    <string name="db_download_failed">Database download failed. Try logging out and back in.</string>
    <string name="logged_out">Logged out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--sections for introduction screen -->
    <string name="slide_welcome_title">Welcome to QLife!</string>
    <string name="slide_welcome_text">The one app for all of your Queen\'s needs</string>
    <string name="slide_schedule_title">Class Schedule</string>
    <string name="slide_schedule_text">See when your classes are</string>
    <string name="slide_campus_title">Campus Info</string>
    <string name="slide_cloud_title">Information in the Cloud</string>
    <string name="slide_cloud_text">Your information is downloaded when you login. After logging in, you don\'t need an Internet connection!</string>
    <string name="slide_campus_text">Easily check building hours, food locations and more</string>
    <string name="slide_food_title">Queens Food</string>
    <string name="slide_food_text">Easily pay with QLife at any roomNum on campus</string>
    <string name="slide_rooms_title">ILC Rooms</string>
    <string name="slide_rooms_text">Find information on rooms and see which are currently available! (You will need internet for this)</string>
    <string name="slide_qr_title">Create a scan-able student number</string>
    <string name="slide_qr_text">Enter your student number on the QR Code page, and a QR code is made of your number. No more needing your student card to get into the gym!</string>

    <!--paragraphs in app-->
    <string name="about_app">Welcome to QLife, thanks for downloading!\n\n
When you login to Solus, your class calendar is downloaded and added to the app. The home screen is the day view. Here, you can see your classes for the day.\n\n
If you swipe from the left side, a menu opens up with information about Queens and the campus. You can also choose the month view, where you can pick a specific day to view your class schedule.\n\n
Your class calendar and other information isn\'t updated unless you log out and log back in again. To log out, go to the settings page. On this page you can also see the date your calendar was last synced.\n\n
Don\'t worry about your data! Only your NetID is automatically stored in the phone, and all data is in an encrypted location only accessible from this app. Also, when you logout, your information is deleted.\n\n
Shout out to the 2016-17 Engineering Society Software Development Team for starting this project! It\'s not a finished product, so if have any ideas on how to improve it please use the Review page!</string>

    <string name="ask_suggestions">If you liked the app, please use the button below to review it on the Play Store!\n\nIf you have any suggestions for improvements, please feel free to email
    doit@engsoc.queensu.ca or submit a suggestion using the button below!</string>

    <string name="number_explanation">If you enter your 8 digit student number, a QR code will be generated for it. This will allow scanner to read your student numbers at places like the ARC, for example.</string>
</resources>
