<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/activity_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/activity_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/review"
        android:orderInCategory="100"
        android:title="@string/activity_review"
        app:showAsAction="never" />
</menu>
